--- a/styles/sass/partials/_general-stuff.scss
+++ b/styles/sass/partials/_general-stuff.scss
@@ -32,3 +32,17 @@ em{
 .upfront-edit-layout .upfront-module-editing .uf-click-to-edit-text, .redactor-box .uf-click-to-edit-text {
 	cursor: text;
 }
+
+/* --- Text alignments --- */
+.text-justify {
+	text-align: justify;
+}
+.text-center {
+	text-align: center;
+}
+.text-left {
+	text-align: left;
+}
+.text-right {
+	text-align: right;
+}
